--- a/app/login/styles.module.css
+++ b/app/login/styles.module.css
@@ -1,3 +1,9 @@
 .main__login__page {
     text-align: center;
 }
+
+.main__login__page__header {
+    font-size: 1em;
+    font-weight: lighter;
+    color: black;
+}
