--- a/app/login/styles.module.css
+++ b/app/login/styles.module.css
@@ -1,9 +1,46 @@
 .main__login__page {
     text-align: center;
+    margin-top: 1em;
 }
 
-.main__login__page__header {
-    font-size: 1em;
-    font-weight: lighter;
+.main__login__page__header h1 {
+    margin: 0;
+    font-size: 2em;
+    font-weight: normal;
     color: black;
+}
+
+.main__login__page__section {
+    max-width: 30em;
+    margin: 0 auto;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+.main__login__page__inputs {
+    display: flex;
+    flex-direction: column;
+}
+
+.main__login__page__username {
+    border-radius: 0.35em;
+    border: none;
+    padding-bottom: 0.5em;
+    margin-bottom: 1.5em;
+    height: 1.5em;
+    cursor: pointer;
+}
+
+.main__login__page__password {
+    border-radius: 0.35em;
+    border: none;
+    padding-bottom: 1em;
+    margin-bottom: 2em;
+    height: 1.5em;
+    cursor: pointer;
+}
+
+.main__login__page__sign_in {
+    font-size: 1em;
+    width: 30em;
 }
