--- a/app/register/styles.module.css
+++ b/app/register/styles.module.css
@@ -1,28 +1,28 @@
-.main__login__page {
+.main__register__page {
     text-align: center;
     margin-top: 1em;
 }
 
-.main__login__page__header h1 {
+.main__register__page__header h1 {
     margin: 0;
     font-size: 2em;
     font-weight: normal;
     color: black;
 }
 
-.main__login__page__section {
+.main__register__page__section {
     max-width: 30em;
     margin: 0 auto;
     margin-top: 1em;
     margin-bottom: 1em;
 }
 
-.main__login__page__inputs {
+.main__register__page__inputs {
     display: flex;
     flex-direction: column;
 }
 
-.main__login__page__username {
+.main__register__page__username {
     border-radius: 0.35em;
     border: none;
     padding-bottom: 0.5em;
@@ -31,20 +31,27 @@
     cursor: pointer;
 }
 
-.main__login__page__password {
+.main__register__page__password {
     border-radius: 0.35em;
     border: none;
-    padding-bottom: 1em;
     margin-bottom: 2em;
     height: 1.5em;
     cursor: pointer;
 }
 
-.main__login__page__sign_in {
+.main__register__page__re__password {
+    border-radius: 0.35em;
+    border: none;
+    margin-bottom: 3em;
+    height: 1.5em;
+    cursor: pointer;
+}
+
+.main__register__page__sign_in {
     font-size: 1em;
     width: 30em;
 }
 
-.main__login__page__signin_link a {
+.main__register__page__login_link a {
     color: rgb(21, 101, 192);
 }
