--- a/app/components/Navigation/styles.module.css
+++ b/app/components/Navigation/styles.module.css
@@ -17,4 +17,20 @@
     text-decoration: none;
     color: #000;
     font-size: 1.5em;
+    align-items: center;
+  }
+
+  .top__navbar__user {
+    display: inline-block;
+    font-size: 1.5em;
+    margin: 0;
+    padding-right: 1em;
+  }
+
+  .top__navbar__logout_btn {
+    border: none;
+    background: none;
+    display: inline-block;
+    font-size: 1.5em;
+    cursor: pointer;
   }
