--- a/app/add-todo/styles.module.css
+++ b/app/add-todo/styles.module.css
@@ -55,15 +55,24 @@
 }
 
 .todo__add__button {
-    height: 4.9em;
-    width: 5em;
+    height: 2.7em;
+    width: 3.2em;
     position: relative;
-    right: 5.2em;
+    right: 3.17em;
     border: none;
     border-radius: 0.25em;
     background-color: rgb(36, 39, 61);
     color: rgb(98, 100, 133);
     cursor: pointer;
+    font-size: 1.5em;
+}
+
+.todo__add__button:hover {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    transition-duration: 1s;
+    transition-delay: 0.2s;
+    color: rgb(106, 58, 153);
 }
 
 .todo__tasks__container {
