--- a/app/components/Navigation/styles.module.css
+++ b/app/components/Navigation/styles.module.css
@@ -35,3 +35,29 @@
   font-size: 1.5em;
   cursor: pointer;
 }
+
+@keyframes spinner {
+  0% {
+      transform: rotate(0deg);
+  }
+
+  100% {
+      transform: rotate(360deg);
+  }
+}
+
+.loading__spinner {
+  width: 50px;
+  height: 50px;
+  border: 10px solid #f3f3f3;
+  border-top: 10px solid #383636;
+  border-radius: 50%;
+  animation: spinner 1.5s linear infinite;
+}
+
+.loading__spinner__container {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  height: 350px;
+}
