--- a/app/my-todos/styles.module.css
+++ b/app/my-todos/styles.module.css
@@ -129,3 +129,22 @@
     margin-bottom: 0;
     text-align: center;
 }
+
+.todo__delete_btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    display: block;
+    position: relative;
+    bottom: 4em;
+    left: 31em;
+    width: 4em;
+    height: 4em;
+}
+
+.todo__delete_btn:hover {
+    transition: transform 300ms ease-in-out;
+    transition-duration: 1s;
+    transition-delay: 0.2s;
+    color: rgb(36, 39, 61);
+}
