--- a/app/components/Navigation/styles.module.css
+++ b/app/components/Navigation/styles.module.css
@@ -62,3 +62,9 @@
   height: 350px;
 }
 
+.page_footer {
+  padding: 1em;
+  margin-top: auto;
+  text-align: center;
+  background: linear-gradient(90deg, rgba(44,45,56,1) 32%, rgba(45,45,46,1) 100%);
+}
