--- a/app/my-todos/styles.module.css
+++ b/app/my-todos/styles.module.css
@@ -1,8 +1,6 @@
 .todo__main__section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    height: 100vh;
+    min-height: 100%;
 }
 
 .todo__main__image {
@@ -10,17 +8,10 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 50vh;
+    height: 100vh;
     background: rgb(20, 0, 36);
     background: linear-gradient(to right, rgba(36, 38, 140, 1) 1%, rgba(110, 59, 154, 1) 100%, rgba(77, 36, 107, 1) 100%);
     object-fit: cover;
-    position: relative;
-}
-
-.todo__alt__image {
-    width: 100%;
-    height: 50vh;
-    background: rgb(23, 23, 35);
 }
 
 .todo__main__form {
@@ -185,6 +176,6 @@
     text-align: center;
     width: 26em;
     height: 2em;
-    position: fixed;
-    top: 40rem;
+    position: relative;
+    overflow: hidden;
 }
