--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,3 +1,12 @@
 .html {
-  background-color: grey;
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  font-family: 'Inter', sans-serif;
+}
+
+.body {
+  margin: 0;
+  padding: 0;
+
 }
