--- a/app/components/Navigation/styles.module.css
+++ b/app/components/Navigation/styles.module.css
@@ -2,30 +2,38 @@
   padding: 0.5em;
   display: inline-block;
   display: flex;
+  padding-left: 2rem;
   justify-content: space-between;
-  background: rgb(44,45,56);
-  background: linear-gradient(90deg, rgba(44,45,56,1) 32%, rgba(45,45,46,1) 100%);
+  background-color: rgb(32, 33, 36);
 }
 
 .top__navbar__right a {
   text-decoration: none;
-  color: #000;
+  color: rgb(91, 92, 118);
   font-size: 1.5em;
   padding: 0 1em;
 }
 
 .top__navbar__home {
   text-decoration: none;
-  color: #000;
+  color: rgb(91, 92, 118);
   font-size: 1.5em;
   align-items: center;
+}
+
+.top__navbar__add:hover {
+  text-decoration: underline;
+  text-decoration-color: rgb(71, 48, 147);
+  text-decoration-thickness: 0.10rem;
+  transition: cubic-bezier(0.075, 0.82, 1, 1);
 }
 
 .top__navbar__user {
   display: inline-block;
   font-size: 1.5em;
   margin: 0;
-  padding-right: 1em;
+  padding-right: 1rem;
+  color: rgb(91, 92, 118);
 }
 
 .top__navbar__logout_btn {
@@ -34,15 +42,24 @@
   display: inline-block;
   font-size: 1.5em;
   cursor: pointer;
+  padding-right: 2rem;
+  color: rgb(91, 92, 118);
+}
+
+.top__navbar__logout_btn:hover {
+  text-decoration: underline;
+  text-decoration-color: rgb(71, 48, 147);
+  text-decoration-thickness: 0.10rem;
+  transition: cubic-bezier(1, 0.82, 1, 1);
 }
 
 @keyframes spinner {
   0% {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   100% {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
@@ -66,5 +83,6 @@
   padding: 1em;
   margin-top: auto;
   text-align: center;
-  background: linear-gradient(90deg, rgba(44,45,56,1) 32%, rgba(45,45,46,1) 100%);
+  background-color: rgb(32, 33, 36);
+  color: rgb(91, 92, 118);
 }
