--- a/app/my-todos/styles.module.css
+++ b/app/my-todos/styles.module.css
@@ -142,7 +142,7 @@
 .todo__page_btn {
     background: none;
     border: none;
-    color: rgb(32, 33, 36);
+    color: rgb(151, 153, 195);
     cursor: pointer;
     font-size: 1.3em;
 }
@@ -162,7 +162,7 @@
     font-weight: bold;
     filter: blur(0);
     transition: filter 1s ease-in-out;
-    color: rgb(32, 33, 36);
+    color: rgb(151, 153, 195);
     margin-right: 1rem;
 }
 .next_btn {
@@ -174,7 +174,7 @@
     font-weight: bold;
     filter: blur(0);
     transition: filter 1s ease-in-out;
-    color: rgb(32, 33, 36);
+    color: rgb(151, 153, 195);
     margin-left: 1rem;
 }
 
@@ -187,8 +187,11 @@
 
 .todo__paginator {
     text-align: center;
-    width: 26em;
+    width: 13em;
     height: 2em;
     position: relative;
     overflow: hidden;
+    border-radius: 0.25rem;
+    background-color: rgb(36, 39, 61);
+    left: 0.5rem;
 }
